# UHDEMG

Code/DataStreamTest/: ADC_input.v  DAC_output_scalable_HPF.v  DataStreamTest.xpr  RAM_bank.v  README.txt  ddr3_state_machine.v  mmcm_drp_func.h  variable_freq_clk_generator.v  xem7310_sdram.xdc
Code/Matlab/EMG_Measurements/: EMG_Measurements.m  Emager.csv  Silver_Ink.csv  getEMGData.m
Code/Matlab/EMG_Simulations/: MU_Decomposition_Test_SImulation.m
Code/RHDInterfaceXEM7310_release_230822/RHDInterfaceXEM7310_release_230822/: MISO_phase_selector.v  SDRAM_FIFO.v  digital_input_deserializer.v  xem7310.xdc
Code/Rhythm_USB3_7310_API_Release_230822/: CMakeLists.txt  ConfigRHDController_7310.bit  main.cpp
Microneedle_Patch/02 - DOCUMENTATION/: Microneedle_3D.STEP  UNeedle_Patch_Dimensions.DXF  UNeedle_Patch_Dimensions.SLDPRT  UNeedle_Patch_Dimensions_V2.DWG  UNeedle_Patch_Dimensions_V2.SLDPRT  UNeedle_Patch_Dimensions_V3.DWG  UNeedle_Patch_Dimensions_V3.SLDPRT  UNeedle_Patch_Dimensions_V3_X16.SLDDRW  UNeedle_Patch_Dimensions_V4_X.SLDDRW  UNeedle_Patch_Dimensions_V5.DWG  UNeedle_Patch_Dimensions_V6.DWG  UNeedle_Patch_Dimensions_V7.DWG
Presentations/Journal Club/: Journal_Club_2026_04.pptx
RHD2164 USBC/: RHD2000.PCBLIB  RHD2000.SCHLIB  RHD2164 USBC.PrjPcb  RHD2164 USBC.PrjPcbStructure  RHD2164 USBC.SchDoc  RHD2164_headstage_BGA.IntLib  RHD2164_headstage_BGA.LibPkg
XEM7310_Breakout/06 - MECHANICAL/: Breakout_Case.SLDASM  Breakout_Case_Bottom.SLDPRT  Breakout_Case_Top.SLDPRT
XEM7310_Mechanical_Drawing/XEM7310/: FPGA_Dev_Kit_Bracket.SLDPRT
(+332 files in other folders)
